--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           </div>
 
           <div class="mb-3">
-            <label class="form-label font-monospace" for="">Leave yor message</label>
+            <label class="form-label font-monospace" for="">Leave your message</label>
             <textarea class="form-control" rows="3"></textarea>
           </div>
 
